# poseidon-ocean-systems

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
paper/: generated_metrics.tex  poseidon_paper.tex  update_metrics.py
results/cad/: hull_design_export.stl  mesh_processing_benchmarks.csv
results/gis/: advanced_geometry_analysis.csv  cable_route_analysis.csv  coordinate_conversion.csv  spatial_benchmarks.csv  submarine_cable_map.html
results/maritime/: anomaly_detection.csv  collision_risk.csv  pascal_bridge_status.csv  port_congestion_prediction.csv  route_optimization.csv
results/optical/: failure_recovery.csv  submarine_network_analysis.csv  wavelength_assignment.csv
results/trident/: experiment_summary.csv  joint_vs_independent_optimization.csv
scripts/: build_toolchains.py
src/: __init__.py  common.py
src/cad/: __init__.py  cpp_bridge.py  geometry.cpp  pipeline.py
src/gis/: pipeline.py
src/maritime/: __init__.py  ais_bridge.pas  ais_bridge.py  ais_parser.pas  bridge_stub.c  pipeline.py
src/optical/: __init__.py  optical_switch.vhd  optical_switch_tb.vhd  pipeline.py
src/poseidon_trident/: __init__.py  run_all.py  trident.py
tests/: test_poseidon.py
