[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poseidon-maritime"
version = "0.1.0"
description = "POSEIDON research framework for maritime, GIS, CAD, optical, and TRIDENT optimization."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
